--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Roll 'em!</title>
+    <title>Dice Rolling Game</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="DiceGame.js"></script>
 </head>
 <body>
+    <audio controls autoplay loop src="jazzbgmusic.mp3"></audio>
     <p class="header">
         <span class="title">WELCOME TO THE TABLE</span><br>
         <i>You get three rolls, get the dice to roll a straight and you win.</i>
