updated code for the icons

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <script src="DiceGame.js"></script>
 </head>
 <body>
-    <audio controls autoplay loop src="jazzbgmusic.mp3"></audio>
+    <audio autoplay loop src="jazzbgmusic.mp3"></audio>
+    <img id="muteIcon" src="sound.png" alt="Mute Icon" onclick="toggleAudio()">
+    <div class="popuptext">Click To Add Ambiance</div></img>
     <p class="header">
-        <span class="title">WELCOME TO THE TABLE</span><br>
+        <span class="title">WELCOME TO THE DICE TABLE</span><br>
         <i>You get three rolls, get the dice to roll a straight and you win.</i>
     </p>
     <form action="#" class="topButtons">
@@ -42,5 +44,9 @@
         <br><br>
         <div>Click the "keep" button in order to keep a specific dice before re-rolling</div>
     </div>
+    <footer>
+        <div>Icons made by <a href="https://www.flaticon.com/authors/saepul-nahwan" title="Saepul Nahwan">Saepul Nahwan</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+        <div>Icons made by <a href="https://www.flaticon.com/authors/google" title="Google">Google</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    </footer>
 </body>
 </html>
